version.  Bowtie 2 is licensed under the GPLv3 license.  See `LICENSE'
file for details.

Reporting Issues
================

Please report any issues to the Bowtie 2 Github page or using the Sourceforge bug tracker:

  * https://github.com/BenLangmead/bowtie2/issues
  * https://sourceforge.net/tracker/?group_id=236897&atid=1101606

Version Release History
=======================

## Version 2.5.2 - Oct 13, 2023 ##

### bowtie2 ###
  * Fixed an issue preventing `bowtie2` from utilizing the specified number of CPU cores
  * Fixed an issue causing `bowtie2` to segfault when reading compressed inputs on Windows
  * Fixed an issue causing `bowtie2` to segfault while parsing interleaved reads
  * Overhauled the FASTQ parser with better tolerance for empty lines

## Version 2.5.1 - Feb 17, 2023 ##

### bowtie2 ###
  * Fixed an issue affecting `bowtie2` alignment accuracy.
  * Updated the versions of the NCBI `NGS` and `VDB` libraries used by `bowtie2`.
  * Fixed a segmentation fault that would occur while aligning SRA data.
  * Fixed an issue preventing `--un-mates` from properly saving unaligned mates.

## Version 2.5.0 - Oct 31, 2022 ##

### bowtie2 ###
  * Overall improvements in the use of prefetch instructions. (contribution by Igor Sfiligoi)
  * Made input/output fully asynchronous by using a dedicated thread. (contribution by Igor Sfiligoi)
  * Added support for AVX2 256-bit instructions with can be enabled by
    setting the `SSE_AXV2` environment variable at compile time. (contribution by Igor Sfiligoi)
  * Fixed an issue causing `bowtie2` to crash when processing ZSTD
    files with high compression ratios.
  * Changed the way that unique alignments are counted in summary
    message to better match up with filters on SAM output

## Version 2.4.5 - Jan 15, 2022 ##

### bowtie2 ###

  * Fixed issues with `bowtie2` BAM parser that would cause `bowtie2` to
    crash when processing input that was encoded with tools other than
    samtools e.g. Picard.